operator/pkg/gateway-api/testdata/gateway/listenerset-http-routing/input/listenerset-http-routing.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-with-listener-sets-http-routing
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  allowedListeners:
    namespaces:
      from: All
  listeners:
    - name: gateway-listener-1
      port: 80
      protocol: HTTP
      hostname: gateway-listener-1.com
      allowedRoutes:
        namespaces:
          from: All
    - name: gateway-listener-2
      port: 81
      protocol: HTTP
      hostname: gateway-listener-2.com
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: listener-set-http-routing-1
  namespace: gateway-conformance-infra
spec:
  parentRef:
    name: gateway-with-listener-sets-http-routing
    namespace: gateway-conformance-infra
  listeners:
    - name: listener-set-http-routing-1-listener-1
      port: 8080
      protocol: HTTP
      hostname: ls1-listener-1.com
      allowedRoutes:
        namespaces:
          from: All
    - name: listener-set-http-routing-1-listener-2
      port: 8081
      protocol: HTTP
      hostname: ls1-listener-2.com
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: listener-set-http-routing-2
  namespace: gateway-conformance-infra
spec:
  parentRef:
    name: gateway-with-listener-sets-http-routing
    namespace: gateway-conformance-infra
  listeners:
    - name: listener-set-http-routing-2-listener-1
      port: 9080
      protocol: HTTP
      hostname: ls2-listener-1.com
      allowedRoutes:
        namespaces:
          from: All
    - name: listener-set-http-routing-2-listener-2
      port: 9081
      protocol: HTTP
      hostname: ls2-listener-2.com
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: attaches-to-all-listeners
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-with-listener-sets-http-routing
      namespace: gateway-conformance-infra
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: listener-set-http-routing-1
      namespace: gateway-conformance-infra
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: listener-set-http-routing-2
      namespace: gateway-conformance-infra
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-with-listener-sets-http-routing
      namespace: gateway-conformance-infra
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-section-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-with-listener-sets-http-routing
      namespace: gateway-conformance-infra
      sectionName: gateway-listener-1
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: listener-set-http-routing-1-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: listener-set-http-routing-1
      namespace: gateway-conformance-infra
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: listener-set-http-routing-1-section-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: listener-set-http-routing-1
      namespace: gateway-conformance-infra
      sectionName: listener-set-http-routing-1-listener-1
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: listener-set-http-routing-2-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: listener-set-http-routing-2
      namespace: gateway-conformance-infra
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
